# small_projs

atari-tabular-rl/: ale_c_wrapper.h  build.sh  main.cpp  md5.cpp  md5.h  min_ale.h  test.py
atari_q_learner/: LICENSE  README.md
energy_puzzle/: fields.h  gen_puzzle.cpp  optimize.cpp  populate.h
headerlib/: Array2d.hpp  README.md  backwards_iter.h  c++pythonGenerators.h  construct_help.hpp  for_each_extend.hpp  intrinsic_help.h  protect_global.hpp  range_array.hpp  two_d_array.h  unpair.hpp  zip_for.hpp
headerlib/test/: make.sh
img_gen/: .gitignore  base_ops.py  ema.py  nn_gan.py  npy_saver.py  practice_gan.py  process_large_imgs.py  quant_block.py  train_generator.py  train_passthrough.py
kaggle/cancer/: configure.sh  export_env.sh  format_chunked.py  (+3 more)
learn-game/: requirements.txt
matrix_puzzle/: main.cpp  run.sh
maze_hunt/: abc.jfif  generate_map.py  jkl.jfif  stu.jfif
maze_walk/: board.h  farray2d.h  main.cpp  mainwindow.cpp  mainwindow.h  operate.py  operate_output.txt  path.pro  plot.R  point.h  readme.md  walk.h
old-reward-surfaces/: .gitignore  README.md  create_env.py  test_env.py
opencl-alg-opt/: .gitignore  CMakeLists.txt  build.sh  cpu_ops.cpp  cpu_ops.h  main.cpp  mat_mul.cl  ocl_executor.cpp  ocl_executor.h  profiler.cpp  profiler.h  test.cl  test_ops.cpp  test_ops.h  transpose.cl  x86vec.hpp
opencl-alg-opt/opencl-2.2/CL/: README.txt
rl_lesson/: .gitignore  README.md  cartpole_policies.ipynb  rl_lesson.ipynb
treasure_hunt/: clue1.tsv  clue2.tsv  clue3.tsv  draw_letters.py  generate_text_patterns.py  pixel_map.json  read_pixelart.py
(+7 files in other folders)
